openmediavault (6.0.39-1) stable; urgency=low

  * Fix error when accessing the FTP service stats page.
  * Relocate FTP welcome message into the /etc/proftpd directory.
  * Issue #1384: Incorrect disk usage warning is displayed for
    BTRFS file systems.

 -- Volker Theile <volker.theile@openmediavault.org>  Wed, 31 Aug 2022 22:17:25 +0200

openmediavault (6.0.38-1) stable; urgency=low

  * Packages that are changing dependencies are now installed
    when pressing the 'Install packages' button in the
    'System | Update Management | Updates' page. This should
    prevent confusion why packages are kept back in the UI
    but installed via the CLI command 'omv-upgrade'.
  * Issue #1381: Fixed an error when changing a user that does
    not yet exist in the database.
  * Issue #1383: Fix proftpd issue when ban rules are activated.

 -- Volker Theile <volker.theile@openmediavault.org>  Mon, 29 Aug 2022 16:09:06 +0200

openmediavault (6.0.37-1) stable; urgency=low

  * Various UI improvements.
  * Issue #1379: Choosing a path in the shared folder form
    field does not mark the form as dirty.

 -- Volker Theile <volker.theile@openmediavault.org>  Mon, 22 Aug 2022 00:05:50 +0200

openmediavault (6.0.36-2) stable; urgency=low

  * Update locale files.
  * Enable remote searching in user/group management pages.
  * Adapted Samba vfs_fruit settings according to the wiki to
    better work with Mac OS X.
    The following environment variables have been introduced
    to customize these settings:
    - OMV_SAMBA_SHARE_FRUIT_VETOAPPLEDOUBLE (defaults to 'no')
    - OMV_SAMBA_SHARE_FRUIT_NFSACES (defaults to 'no')
    - OMV_SAMBA_SHARE_FRUIT_WIPEINTENTIONALLYLEFTBLANKRFORK (defaults to 'yes')
    - OMV_SAMBA_SHARE_FRUIT_DELETEEMPTYADFILES (defaults to 'yes')
  * Issue #1378: Validate SMB workgroup name.

 -- Volker Theile <volker.theile@openmediavault.org>  Thu, 18 Aug 2022 10:16:56 +0200

openmediavault (6.0.35-1) stable; urgency=low

  * Update locale files.