@@ -1,0 +1,24 @@
+<mat-progress-bar *ngIf="loading && firstLoad"
+                  mode="indeterminate">
+</mat-progress-bar>
+<div *ngIf="data"
+     class="omv-dashboard-widget-value">
+  <div class="content"
+       fxLayout="row"
+       fxLayoutAlign="start center">
+    <mat-icon *ngIf="config.value.icon"
+              mat-card-avatar
+              svgIcon="{{ config.value.icon | mapIconEnum }}">
+    </mat-icon>
+    <div fxLayout="column"
+         fxLayoutAlign="center stretch"
+         [ngClass]="{'omv-ml-h': config.value.icon}">
+      <div class="omv-font-weight-bold">
+        {{ config.value.title | template:data | translate }}
+      </div>
+      <div>
+        {{ config.value.value | template:data | translate }}
+      </div>
+    </div>
+  </div>
+</div>
