@@ -1,0 +1,6 @@
+@import 'src/styles';
+
+.omv-dashboard-widget-value {
+  margin: $omv-padding;
+  max-height: 300px;
+}
