@@ -2,6 +2,9 @@ openmediavault (6.0.39-1) stable; urgency=low
 
   * Fix error when accessing the FTP service stats page.
   * Relocate FTP welcome message into the /etc/proftpd directory.
+  * Add new Dashboard widget type to display simple values.
+    The 'System time' and 'System updates' widget have been
+    added as examples.
   * Issue #1384: Incorrect disk usage warning is displayed for
     BTRFS file systems.
 
